# antrop_arms_ros

./: CMakeLists.txt  README.md  package.xml
antrop_arms_control/: CMakeLists.txt  package.xml
antrop_arms_control/bags/: antrop_arms2.bag  antrop_arms3.bag  hpe_arm_test.bag  hpe_arms.bag  hpe_both_arms_test1.bag  hpe_complete.bag  hpe_left_arm_test1.bag  hpecompltest1.bag  participant3vhpe.bag  participant5vpeS.bag
antrop_arms_control/cfg/: DynamicReconfigurePid.cfg
antrop_arms_control/config/: controller.yaml  pid_gains.yaml
antrop_arms_control/launch/: antropArmsPythonInterfaceLaunch.launch  antrop_arms_gazebo_control.launch  controller.launch
antrop_arms_control/msg/: CartesianArmCmd.msg  JointArmCmd.msg  TorsoJointPositions.msg
antrop_arms_control/scripts/: antropArmsPythonInterface.py  pid.py
antrop_arms_description/: CMakeLists.txt  package.xml
antrop_arms_description/launch/: .gazebo.launch.swp  controller.launch  controller.yaml  gazebo.launch
antrop_arms_description/meshes/: Servo_Herkulex_v1_1.stl  Servo_Herkulex_v1__1__1.stl  Shoulder_Yaw_Structure_v1__1__1.stl  Shoulder_Yaw_Transmission_v1__1__1.stl  base_link.stl  elbow_right_link_1.stl
antrop_arms_description/scripts/: antropArmsPythonInterface.py
antrop_arms_description/urdf/: antrop_arms.gazebo  antrop_arms.trans  antrop_arms.xacro  materials.xacro
antrop_arms_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
antrop_arms_moveit_config/config/: antrop_arms.srdf  fake_controllers.yaml  gazebo_antrop_arms.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
antrop_arms_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
launch/: display.launch  gazebo.launch
meshes/: Shoulder_Yaw_Structure_v1_1.stl  Shoulder_Yaw_Transmission_v1_1.stl  elbow_left_link_1.stl  forearm_left_link_1.stl  forearm_right_link_1.stl  shoulder_left_link_1.stl  shoulder_right_link_1.stl
urdf/: antrop_arms.xacro
