<?xml version="1.0"?>
<package format="2">
  <name>antrop_arms</name>
  <version>0.0.0</version>
  <description>Antrop arms metapackage</description>


  <maintainer email="filip.zoric@fer.hr">Filip Zoric</maintainer>
  <maintainer email="luka.maric@fer.hr">Luka Maric</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
